# singletons-rs

./: Cargo.toml  README.md
.github/workflows/: release-plz.yml
examples/: map_overview.rs  set_overview.rs
src/: casting.rs  key.rs  lib.rs  map.rs  set.rs
