[package]
name = "singletons"
version = "0.1.0"
edition = "2021"
rust-version = "1.57.0"
description = "Type-keyed data structures: SingletonSet stores one instance per type, SingletonMap<V> maps types to values"
repository = "https://github.com/FlippingBinaryLLC/singletons-rs"
license = "MIT OR Apache-2.0"
keywords = ["data", "map", "set", "singleton", "structure"]
categories = ["data-structures"]
exclude = [".github", ".gitignore", ".markdownlint.jsonc"]

[dependencies]
indexmap = "2.7"

[features]
default = ["map", "set"]
map = []
set = []
